syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hospital.grpc";
option java_outer_classname = "UsuarioProto";

service UsuarioService {
  rpc CriarUsuario (UsuarioRequest) returns (UsuarioResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc VerificarUsuario (VerificarUsuarioRequest) returns (VerificarUsuarioResponse);
}

// Requisição para criar usuário (qualquer tipo)
message UsuarioRequest {
  string tipo = 1;        // "paciente", "medico", "recepcionista", "admin"
  string nome = 2;
  string info_extra = 3;  // Problema (paciente) ou CRM (médico)
  string telefone = 4;
  string email = 5;
  string senha = 6;
}

// Resposta da criação de usuário
message UsuarioResponse {
  string mensagem = 1;
  bool sucesso = 2;
  int32 id_gerado = 3;
}

// Requisição de login
message LoginRequest {
  string email = 1;
  string senha = 2;
}

// Resposta de login
message LoginResponse {
  bool autenticado = 1;
  string mensagem = 2;
  string tipo_usuario = 3;
  string nome = 4;
  int32 id_usuario = 5;
}

message VerificarUsuarioRequest {
  int32 id = 1;
}

message VerificarUsuarioResponse {
  bool existe = 1;
}
